# langchain_with_LLM

./: basics.py  customTool.py  customeTool.py  dblang.py  duckduckgo.py  lang.py  lang1.py  lang10.py  lang11.py  lang2.py  lang3.py  lang4.py  lang5.py  lang6.py  lang7.py  lang8.py  lang9.py  main.py  pyproject.toml  reAct_DBagent.py  somepyFile.py  wikipedialang.py
salesDB/: sales.db
